# LibreChat

./: .cursorignore  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.sandpack  GROUP_PERMISSIONS_README.md  bun.lockb  commands-rafael.md  dev.commands-rafael.md  docker-compose.override.deploy.yml  docker-compose.override.local.yml  docker-compose.sandbox.yml  docker-compose.yml  faltam.txt  faltam_backup-11-25-20-01-2025.txt  foram.txt  groups-config.json  groups-config.json.backup  lakehouse-agent-access-model.html  librechat.example.yaml  librechat.old.yaml  librechat_bellanda.yaml  models-descriptions_old.json  nao-mexi.txt  node  package-lock.json  package.json  pyproject.toml  review_diff.py  sandbox.md  setup.sh
.devcontainer/: docker-compose.yml
.github/workflows/: backend-review.yml  dev-images.yml  eslint-ci.yml  generate_embeddings.yml  locize-i18n-sync.yml
.github/workflows-disabled/: a11y.yml  eslint-ci.yml  frontend-review.yml  i18n-unused-keys.yml  unused-packages.yml
api/: package.json  typedefs.js
api/app/clients/: AnthropicClient.js  BaseClient.js  OpenAIClient.js
api/app/clients/prompts/: artifacts.js  createContextHandlers.js  formatMessages.js
api/db/: utils.js
api/models/: Agent.js  Conversation.js  File.js  File.spec.js  GroupsConfigs.js  ModelsDescriptions.js  Role.js  Transaction.js  index.js  spendTokens.js  tx.js  tx.spec.js
api/server/: experimental.js  index.js  index.spec.js
api/server/controllers/: AuthController.js  EditController.js  EndpointController.js  ModelController.js  UserController.js  mcp.js  tools.js
api/server/middleware/: abortMiddleware.js  buildEndpointOption.js  checkGroupPermissions.js  groupsMiddleware.js  index.js  validateConversationParams.js  validateConversationPermissions.js  validateImageRequest.js
api/server/routes/: accessPermissions.js  actions.js  bedrock.js  config.js  convos.js  endpoints.js  groupsConfigs.js  index.js  mcp.js  messages.js  modelsDescriptions.js  oauth.js  pythonTools.js
api/server/services/: ActionService.js  AgentLogger.js  AuthService.js  GraphApiService.js  GraphTokenService.js  GroupPermissionService.js  GroupsConfigsService.js  MCP.js  MCP.spec.js  ModelsDescriptionsService.js  PermissionService.js  ToolService.js  initializeMCPs.js  suggestedStarters.js
api/server/utils/: limitCodeOutput.js
api/strategies/: openIdJwtStrategy.js  openidStrategy.js
api/utils/: tokens.js
client/: components.json  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
client/public/: models-descriptions.json
client/scripts/: post-build.cjs
client/src/: App.jsx  style.css  vite-env.d.ts
client/src/@types/: i18next.d.ts
client/src/Providers/: AddedChatContext.tsx  AgentPanelContext.tsx  BadgeRowContext.tsx  DragDropContext.tsx  MessageContext.tsx  MessagesViewContext.tsx  ModelDescriptionsContext.tsx  index.ts
client/src/common/: menus.ts  types.ts
client/src/data-provider/: mutations.ts  queries.ts
client/src/hooks/: useHPEAgentsProcessor.ts  useModelDescriptions.ts  useNewConvo.ts  useScrollToRef.ts
client/src/routes/: ChatRoute.tsx  Documentation.tsx  Reports copy.tsx  Reports.tsx  Root.tsx  RouteErrorBoundary.tsx  index.tsx
client/src/store/: agents.ts  families.ts  index.ts  mcp.ts  misc.ts  reports.ts  settings.ts
client/src/types/: model.ts
client/src/utils/: buildDefaultConvo.ts  citations.ts  cleanHtml.ts  convos.ts  endpoints.ts  files.ts  latex.spec.ts  latex.ts  map.ts  mermaid.ts  messages.ts  translateModelsNames.ts  unifiedStreamingUi.ts
config/: manage-user-groups.js
cron/: .gitignore  Dockerfile  crontab  main.py  pyproject.toml
cron/json/: custom-credits_old-10-04-2026.json  custom-credits_old.json
cron/notebooks/: 1_token_credits.ipynb  2_cost_centers.ipynb  3_update_groups_and_models.ipynb  4_agents_categories.ipynb  5_manage_agent_categories.ipynb  6_reset_use_policy.ipynb  7_define_users_groups.ipynb  main rafael.ipynb  to_do.md  users_emails.ipynb
cron/scripts/: set_cost_centers.py  set_credits.py  user_statistics.py
cron/utils/database/: __init__.py  oracle_manager.py  tns_parser.py
docs/: 01. README-PROMPTS-FERRAMENTAS.md  02. FLUXO-DESCOBERTA-FERRAMENTAS.md  03. PROMPTS-ATTUAIS-FERRAMENTAS.md  04. ARQUIVOS-PROMPTS-MAPA.md  05. SNIPPETS-CODIGO-PROMPTS.md  CORE-CHAT-UX-IMPROVEMENTS.md  referencia-tecnica-codigos.md  referencia-tecnica.md
markdown-html-pdf-api/: Dockerfile  README.md  commands.md  main.py  pyproject.toml  requirements.txt
markdown-html-pdf-api/app/: converter.py  main.py
markdown-html-pdf-api/test/: test_api.py
markdown-html-pdf-api/test-markdown-package/: test.py
markdown-html-pdf-api/test/archives/: input.md
notebooks/: 1_token_credits.ipynb  2_cost_centers.ipynb  main.ipynb
python-tools-api/: Dockerfile  main.py  pyproject.toml
python-tools-api/app/: converter.py
python-tools-api/markdown-html-pdf/: main.py  pyproject.toml
python-tools-api/markdown-html-pdf/src/markdown_html_pdf/_docs/html/: example.html  template.html
python-tools-api/markdown-html-pdf/src/markdown_html_pdf/_docs/markdown/: example.md
python-tools-api/markdown-html-pdf/src/markdown_html_pdf/tools/: _markdown_to_html.py
rag_api/: Dockerfile  main.py  output.md  pyproject.full.toml  pyproject.toml  requirements.txt
rag_api/app/: config.py  constants.py  middleware.py  models.py
rag_api/app/routes/: document_routes.py  pgvector_routes.py
rag_api/app/services/: database.py  mongo_client.py
rag_api/app/services/vector_store/: async_pg_vector.py  atlas_mongo_vector.py  extended_pg_vector.py  factory.py
rag_api/app/utils/: document_loader.py  preprocess_file.py
rag_api/notebooks/: 1_lab.ipynb
rag_api/tests/: a.py  test_tabula.py
scripts/: .gitignore  clean-dist.mjs  migrate-user-groups.js
scripts/admin/: README.md  updateUserRoles.js
utils/: BILLING-SUMMARY.md  README.md  TOKEN-BILLING-GUIDE.md  TOKEN-CALCULATION-PATHS.md  billing-dashboard.js  sync-model-prices.js  test-billing.js  token-values-reference.js  validate-token-billing.js
(+351 files in other folders)
