[project]
name = "python-tools-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "uvicorn",
    "python-multipart",
    "playwright>=1.40.0",
    "dotenv>=0.9.9",
    "pymongo>=4.13.2",
    "markdown-html-pdf",
]

[tool.uv.workspace]
members = ["markdown-html-pdf"]

[tool.uv.sources]
markdown-html-pdf = { workspace = true }
