[project]
name = "rag-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==23.2.1",
    "asyncpg==0.29.0",
    "boto3==1.34.144",
    "cryptography==44.0.1",
    "docx2txt==0.8",
    "fastapi==0.115.12",
    "ipykernel>=6.29.5",
    "langchain==0.3.12",
    "langchain-aws==0.2.1",
    "langchain-community==0.3.12",
    "langchain-core==0.3.27",
    "langchain-google-vertexai==2.0.0",
    "langchain-huggingface==0.1.0",
    "langchain-mongodb==0.2.0",
    "langchain-ollama==0.2.0",
    "langchain-openai==0.2.11",
    "langchain-text-splitters==0.3.3",
    "markdown==3.6",
    "networkx==3.2.1",
    "opencv-python-headless==4.9.0.80",
    "openpyxl==3.1.2",
    "pandas==2.2.1",
    "pgvector==0.2.5",
    "psycopg2-binary==2.9.9",
    "pydantic==2.9.2",
    "pyjwt==2.8.0",
    "pymongo==4.6.3",
    "pypandoc==1.13",
    "pypdf==4.1.0",
    "python-dotenv==1.0.1",
    "python-magic==0.4.27",
    "python-multipart==0.0.19",
    "python-pptx==0.6.23",
    "rapidocr-onnxruntime==1.3.24",
    "sentence-transformers==3.1.1",
    "sqlalchemy==2.0.28",
    "unstructured==0.16.11",
    "uvicorn==0.28.0",
    "xlrd==2.0.1",
]
