[project]
name = "rag-api"
version = "0.1.0"
description = "RAG API"
requires-python = ">=3.12"

# -------------------------------------------------
# 📚 Dependências principais (baseadas no requirements.txt original)
# -------------------------------------------------
dependencies = [
    # ---------- LangChain core ----------
    "langchain==0.3.26",
    "langchain-community==0.3.27",
    "langchain-openai==0.3.27",
    "langchain-core>=0.3.76",
    "langchain-aws>=0.2.34",
    "langchain-google-vertexai==2.0.27",
    "langchain-google-genai==2.1.10",
    "langchain-huggingface==0.1.0",
    "langchain-ollama==0.3.3",
    "langchain-mongodb>=0.2.1",
    "langchain-text-splitters==0.3.8",
    # ---------- Infraestrutura ----------
    "boto3>=1.39.7",
    "sqlalchemy==2.0.41",
    "python-dotenv==1.1.1",
    "fastapi==0.115.12",
    "psycopg2-binary==2.9.9",
    "pgvector==0.2.5",
    "uvicorn==0.28.0",
    # ---------- Processamento de documentos ----------
    "pypdf==6.0.0",
    "unstructured>=0.16.12",
    "markdown==3.8.2",
    "networkx==3.2.1",
    "pandas>=2.2.2",
    "openpyxl==3.1.5",
    "docx2txt==0.9",
    "pypandoc==1.15",
    # ---------- Segurança & Autenticação ----------
    "PyJWT==2.8.0",
    "cryptography==45.0.5",
    # ---------- Async & I/O ----------
    "asyncpg==0.29.0",
    "python-multipart==0.0.19",
    "aiofiles==24.1.0",
    # ---------- IA & Embeddings ----------
    "sentence-transformers==3.1.1",
    "rapidocr-onnxruntime==1.4.4",
    "opencv-python-headless==4.9.0.80",
    # ---------- Banco de Dados ----------
    "pymongo==4.6.3",
    # ---------- Utilitários ----------
    "python-magic==0.4.27",
    "python-pptx==1.0.2",
    "xlrd==2.0.2",
    "chardet==5.2.0",
    "pydantic>=2.10.0",
    "markdown-html-pdf",
    # ---------- Dependências extras para processamento de arquivos ----------
    "msoffcrypto-tool", # Para arquivos Excel protegidos por senha
    "python-docx", # Para arquivos DOCX (alternativa ao docx2txt)
    "beautifulsoup4", # Para parsing HTML
    "lxml", # Parser XML/HTML
    "pillow", # Processamento de imagens
    "pdfplumber", # Extração avançada de PDF
    "odfpy", # Para arquivos OpenDocument (ODT, ODS, ODP)
    "tabulate>=0.9.0",
    "tabula-py>=2.10.0",
    "tiktoken>=0.5.0", # Para contagem precisa de tokens
    "ipykernel>=6.30.1",
]
