[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markdown-html-pdf"
version = "3.0.0"
description = "A powerful Python package to convert Markdown files to PDF with syntax highlighting and emoji support"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Gustavo Casadei Bellanda", email = "bellanda.dev@outlook.com" },
]
keywords = ["markdown", "pdf", "converter", "playwright", "syntax-highlighting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.1",
    "cmarkgfm>=2025.10.22",
    "fireworks-ai>=0.19.20",
    "flask>=3.1.2",
    "groq>=0.37.1",
    "playwright>=1.56.0",
    "pymupdf>=1.26.6",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.9.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "ruff>=0.1.0"]

[project.urls]
Homepage = "https://github.com/bellanda/markdown-html-pdf"
Repository = "https://github.com/bellanda/markdown-html-pdf"
Issues = "https://github.com/bellanda/markdown-html-pdf/issues"

[project.scripts]
markdown-html-pdf = "markdown_html_pdf.cli:main"
md2pdf = "markdown_html_pdf.cli:main"
install-emoji-fonts = "markdown_html_pdf.cli:install_fonts"

[tool.hatch.build.targets.wheel]
packages = ["src/markdown_html_pdf", "environment"]

[tool.hatch.build.targets.wheel.sources]
"src/markdown_html_pdf" = "markdown_html_pdf"
"environment" = "environment"
